Fix #90, #70; Z-index related fixes. (#154)
This adds `zIndex` to our theme, and ensures they're passed through
to ant.

We also set a `zIndex` for our header which is above dropdowns
and datepickers, as to ensure they don't show up over the header.

--- a/ui/public/theme.less
+++ b/ui/public/theme.less
@@ -144,3 +144,18 @@
     // overrise buttons
     @btn-font-weight: 400;
     @btn-border-radius-base: 4px;
+
+    @zindex-table-fixed: auto;
+    @zindex-affix: 10;
+    @zindex-back-top: 10;
+    @zindex-badge: 10;
+    @zindex-picker-panel: 10;
+    @zindex-popup-close: 10;
+    @zindex-modal: 1000;
+    @zindex-modal-mask: 1000;
+    @zindex-message: 1010;
+    @zindex-notification: 1010;
+    @zindex-popover: 1030;
+    @zindex-dropdown: 1050;
+    @zindex-picker: 1050;
+    @zindex-tooltip: 1060;
